--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: jekyllgemcode@jekyll.com
 description: >- # this means to ignore newlines until "baseurl:"
   Crie sites estáticos de forma sensacional com Jenkyll {Ruby}
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://reinaldonunes.github.io/jenkyllSite/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  reinaldonunes
 
 # Build settings
