--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,14 @@ github_username:  reinaldonunes
 theme: minima
 plugins:
   - jekyll-feed
+
+lsi: false
+safe: true
+source: https://reinaldonunes.github.io/jenkyllSite/
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
